// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`生成 interface 测试 OpenAPI-2.0-source生成 interface 测试: OpenAPI-2.0-source生成 interface 测试 1`] = `
"/**
 * @description uploads an image【请求数据类型定义】
 * @url [ POST ] /v2/pet/{petId}/uploadImage
 */
export interface 安逗和黑子 {
  code: number;
  type: string;
  message: string;
}
"
`;

exports[`生成 interface 测试 OpenAPI-2.0生成 interface 测试: OpenAPI-2.0生成 interface 测试 1`] = `
"/**
 * @description Place an order for a pet【请求数据类型定义】
 * @url [ POST ] /v2/store/order
 */
export interface 安逗和黑子 {
  id: number;
  petId: number;
  quantity: number;
  shipDate: string;
  // Order Status
  status: 'placed' | 'approved' | 'delivered';
  // Order Tag
  tag: Array<
    // Order Tag Child
    Array<{
      tagName: 'error' | 'waring' | 'info';
    }>
  >;
  complete: boolean;
}
"
`;

exports[`生成 interface 测试 OpenAPI-3.0生成 interface 测试: OpenAPI-3.0生成 interface 测试 1`] = `
"/**
 * @description Place an order for a pet、Place a new order in the store【响应数据类型定义】
 * @url [ POST ] /api/v3/store/order
 */
export interface IApiV3StoreOrderResponseByPost {
  id?: number;
  petId?: number;
  quantity?: number;
  shipDate?: string;
  // Order Status
  status?: 'placed' | 'approved' | 'delivered';
  complete?: boolean;
}
"
`;

exports[`生成 interface 测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 interface - dropComment属性测试 1`] = `
"export interface IV2StoreOrderRequestByPost {
  id: number;
  petId: number;
  quantity: number;
  shipDate: string;
  // Order Status
  status: 'placed' | 'approved' | 'delivered';
  // Order Tag
  tag: Array<
    // Order Tag Child
    Array<{
      tagName: 'error' | 'waring' | 'info';
    }>
  >;
  complete: boolean;
}
"
`;

exports[`生成 interface 测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 interface - name属性测试 1`] = `
"/**
 * @description Place an order for a pet【请求数据类型定义】
 * @url [ POST ] /v2/store/order
 */
export interface 自定义名称 {
  id: number;
  petId: number;
  quantity: number;
  shipDate: string;
  // Order Status
  status: 'placed' | 'approved' | 'delivered';
  // Order Tag
  tag: Array<
    // Order Tag Child
    Array<{
      tagName: 'error' | 'waring' | 'info';
    }>
  >;
  complete: boolean;
}
"
`;

exports[`生成 interface 测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 interface - onlyBody属性测试 1`] = `
"interface RuleForm {
  // 手机号
  phone: string;
  // 账户名
  username: string;
}
"
`;

exports[`生成 interface 测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 interface - prefix属性测试 1`] = `
"/**
 * @description Place an order for a pet【请求数据类型定义】
 * @url [ POST ] /v2/store/order
 */
interface IV2StoreOrderRequestByPost {
  id: number;
  petId: number;
  quantity: number;
  shipDate: string;
  // Order Status
  status: 'placed' | 'approved' | 'delivered';
  // Order Tag
  tag: Array<
    // Order Tag Child
    Array<{
      tagName: 'error' | 'waring' | 'info';
    }>
  >;
  complete: boolean;
}
"
`;

exports[`生成 interface 测试 open-api-2.0-param[0].json: open-api-2.0-param[0].json 1`] = `
"/**
 * @description allocatedList【请求数据类型定义】
 * @url [ GET ] /system/role/authUser/allocatedList
 */
export interface ISystemRoleAuthUserAllocatedListRequestByGet {
  // 创建者
  createBy?: string;
  // 创建时间
  createTime?: string;
  // 请求参数
  params?: {
    [propName: string]: any;
  };
  // 备注
  remark?: string;
  // 搜索值
  searchValue?: string;
  // 更新者
  updateBy?: string;
  // 更新时间
  updateTime?: string;
  admin?: boolean;
  avatar?: string;
  delFlag?: string;
  deptId?: number;
  email?: string;
  loginDate?: string;
  loginIp?: string;
  nickName?: string;
  password?: string;
  phonenumber?: string;
  postIds?: Array<any>;
  roleId?: number;
  roleIds?: Array<any>;
  roleName?: string;
  sex?: string;
  status?: string;
  userId?: number;
  userName?: string;
  dept?: {
    // 创建者
    createBy?: string;
    // 创建时间
    createTime?: string;
    // 请求参数
    params?: {
      [propName: string]: any;
    };
    // 备注
    remark?: string;
    // 搜索值
    searchValue?: string;
    // 更新者
    updateBy?: string;
    // 更新时间
    updateTime?: string;
    ancestors?: string;
    delFlag?: string;
    deptId?: number;
    deptName?: string;
    email?: string;
    leader?: string;
    orderNum?: string;
    parentId?: number;
    parentName?: string;
    phone?: string;
    status?: string;
  };
  roles?: Array<{
    // 创建者
    createBy?: string;
    // 创建时间
    createTime?: string;
    // 请求参数
    params?: {
      [propName: string]: any;
    };
    // 备注
    remark?: string;
    // 搜索值
    searchValue?: string;
    // 更新者
    updateBy?: string;
    // 更新时间
    updateTime?: string;
    admin?: boolean;
    dataScope?: string;
    delFlag?: string;
    deptCheckStrictly?: boolean;
    deptIds?: Array<any>;
    flag?: boolean;
    menuCheckStrictly?: boolean;
    menuIds?: Array<any>;
    roleId?: number;
    roleKey?: string;
    roleName?: string;
    roleSort?: string;
    status?: string;
  }>;
}

/**
 * @description allocatedList【请求数据类型定义】
 * @url [ GET ] /system/role/authUser/allocatedList
 */
export interface ISystemRoleAuthUserAllocatedListRequestByGet {
  // TableDataInfo
  code: number;
  msg: string;
  rows: Array<{
    [propName: string]: any;
  }>;
  total: number;
}
"
`;
